Ensure inputs are readable

--- a/scss/html/_input.scss
+++ b/scss/html/_input.scss
@@ -3,6 +3,7 @@ select,
 textarea {
 
 	background: var(--color-pop);
+	color: inherit;
 	border: var(--border-width) solid var(--color-border);
 
 }
